public class Storage {
    private String[] entry;

    public Storage(String[] entry) {
        this.entry = entry;
    }

    public String[] getEntry() {
        return entry;
    }
}
